# Arbor

./: .gitignore  FEATURE_PROPOSALS.md  ONLINE_AUTH_HARDENING_PLAN.md  PHASE1_PROGRESS.md  README.md  hardeningcall.md  install.sh  sync_installed_dev.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: security.yml
apparmor/: usr.bin.arbor  usr.bin.arbor-daemon
backend/: pyproject.toml
backend/arbor/: action_security.py  approval_cli.py  approval_mode.py  auth.py  authorization.py  config_env.py  csrf.py  daemon_client.py  emerge_log.py  ipc_auth.py  local_auth.py  local_auth_cli.py  login_throttle.py  main.py  server.py  session.py  totp_admin.py
backend/daemon/: main.py  use_origin.py
backend/tests/: test_csp_migration.py  test_phase0_characterization.py  test_phase1_privilege_classification.py  test_phase2_approval_requests.py  test_phase2_pretend_cleanup.py  test_phase35_ws_auth_surface.py  test_phase3_overlay_confirmation.py  test_phase4_job_recovery.py  test_phase6_hardening.py  test_phase7_local_auth_cli.py  test_phase7_local_auth_foundation.py  test_phase8_authorization_gate.py  test_phase8_endpoint_roles.py  test_pr1_web_edge.py  test_pr2_ipc_and_approval.py  test_pr3_log_and_edges.py  test_pr4_step_up_universal.py
config/: arbor.env.example  setup.sh
config/logrotate.d/: arbor
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/alpine/: app.js  index.html  style.css
frontend/src/: App.svelte
openrc/: arbor  arbor-daemon
systemd/: arbor-daemon.service  arbor.service
(+14 files in other folders)
