[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "qrcode>=7.4",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
arbor = "arbor.server:run"
arbor-daemon = "daemon.main:cli"
arbor-approve = "arbor.approval_cli:main"
arbor-auth = "arbor.local_auth_cli:main"

[tool.setuptools]
packages = ["arbor", "daemon"]
