[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "qrcode>=7.4",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pip-tools>=7.4",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.7",
    "semgrep>=1.60",
    "ruff>=0.6",
]

[project.scripts]
arbor = "arbor.server:run"
arbor-daemon = "daemon.main:cli"
arbor-approve = "arbor.approval_cli:main"
arbor-auth = "arbor.local_auth_cli:main"

[tool.setuptools]
packages = ["arbor", "daemon"]
